--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							</div>
 						</div>
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/python.svg" alt="python"></p>
 							<div class="skill-body">
 								<h3 class="skill-name">Python</h3>
 								<p class="skill-text">
