--- a/ensyu/11.html
+++ b/ensyu/11.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>プロパティ（その２）</title>
-    <!--ここにGoogle Fontsのlinkタグ-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="11.css" />
   </head>
   <body>
