--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 						<a class="works-item btn-open" href="ensyu/10.html">ENSYU 10</a>
 						<a class="works-item btn-open" href="ensyu/11.html">ENSYU 11</a>
 						<a class="works-item btn-open" href="ensyu/12.html">ENSYU 12</a>
-						<a class="works-item btn-open" href="ensyu/13.html">ENSYU 13</a>
+						<a class="works-item btn-open" href="ensyu/13_1.html">ENSYU 13</a>
+						<a class="works-item btn-open" href="ensyu/13_2.html">ENSYU 13</a>
 						<a class="works-item btn-open" href="ensyu/14.html">ENSYU 14</a>
 						<a class="works-item btn-open" href="ensyu/15.html">ENSYU 15</a>
 						<a class="works-item btn-open" href="ensyu/16.html">ENSYU 16</a>
@@ -93,7 +94,7 @@
 					<h2 class="title">SKILL</h2>
 					<div class="skill-list">
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/css.png" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">HTML5/CSS3</h3>
 								<p class="skill-text">
@@ -109,7 +110,7 @@
 							</div>
 						</div>
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/java.png" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">Java</h3>
 								<p class="skill-text">
