--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">Python</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									パイソン</p>
 							</div>
 						</div>
 						<div class="skill-item">
