--- a/challenge2/ch2.html
+++ b/challenge2/ch2.html
@@ -14,6 +14,9 @@
       <header>
         <h1 class="logo">
           <img src="logo.png" alt="Natural Coffee" width="150" height="90" />
+          <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Reggae+One&family=RocknRoll+One&display=swap" rel="stylesheet">
         </h1>
         <nav>
           <ul>
