--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-	<meta name="description" content="JOHO TAROのポートフォリオサイトです" />
+	<meta name="description" content="KANETA AYATOのポートフォリオサイトです" />
 	<title>PORTFOLIO</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
 		<header class="header ">
 			<div class="inner">
 				<h1 class="header-logo">
-					<a href=".">JOHO TARO</a>
+					<a href=".">PORTFOLIO</a>
 				</h1>
 				<nav class="header-nav">
 					<ul class="header-nav-list">
@@ -36,15 +36,14 @@
 			<!-- main-visual -->
 			<div class="main-visual" id="about">
 				<div class="main-visual-inner">
-					<p class="main-visual-title">AYATO</p>
-					<p class="main-visual-subtitle">PORTFOLIO</p>
+					<img src="portfolio/img/logo.png">
 					<div class="main-visual-profile">
 						<p class="main-visual-img">
-							<img src="portfolio/img/profile.png" alt="自画像" />
+							<img src="portfolio/img/profile.png" >
 						</p>
 						<p class="main-visual-text">
-							開校53年の経験とノウハウがあり、<br class="sp-only">他校ではマネのできない実績。<br>
-							HCSなら、即戦力になるためのスキルが<br class="sp-only">ガッチリ身につきます。<br>
+							平成１４年４月１５日生まれ、<br class="sp-only">PCやアニメが大好きな男子<br>
+							現在はHCS学生、将来に向け資格や技術を取得中、<br class="sp-only">勉強を頑張っています。<br>
 						</p>
 					</div>
 				</div>
@@ -98,7 +97,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">HTML5/CSS3</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									１２月の１か月だけの授業、この１か月でサイトが作れるぐらい多くの事を学んだ</p>
 							</div>
 						</div>
 						<div class="skill-item">
@@ -106,7 +105,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">Python</h3>
 								<p class="skill-text">
-									パイソン</p>
+									秋の授業で、基礎的な事を学んだ。</p>
 							</div>
 						</div>
 						<div class="skill-item">
@@ -121,8 +120,11 @@
 							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">国家試験</h3>
-								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+								<nav class="skill-text">
+									<ul>
+										<li>基本情報技術者</li>
+									</ul>
+								</nav>
 							</div>
 						</div>
 					</div>
