--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">HTML5/CSS3</h3>
 								<p class="skill-text">
-									１２月の１か月だけの授業、この１か月でサイトが作れるぐらい多くの事を学んだ</p>
+									HTML5及びCSS3でサイトが作れるぐらい多くの技術を持っている</p>
 							</div>
 						</div>
 						<div class="skill-item">
@@ -105,7 +105,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">Python</h3>
 								<p class="skill-text">
-									秋の授業で、基礎的な事を学んだ。</p>
+									秋の授業で、基礎的な事を学び、色んな最新プログラミングができるようになった。</p>
 							</div>
 						</div>
 						<div class="skill-item">
@@ -113,7 +113,8 @@
 							<div class="skill-body">
 								<h3 class="skill-name">Java</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									プログラミングの主であるJava<br>
+									中級程度のプログラミング技術を持っている</p>
 							</div>
 						</div>
 						<div class="skill-item">
@@ -122,7 +123,8 @@
 								<h3 class="skill-name">国家試験</h3>
 								<nav class="skill-text">
 									<ul>
-										<li>基本情報技術者</li>
+										<p>11月に情報技術者試験を取得<br>
+										他にも色々勉強中</p>
 									</ul>
 								</nav>
 							</div>
