--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<h2 class="title">SKILL</h2>
 					<div class="skill-list">
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/css.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/html-5.svg" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">HTML5/CSS3</h3>
 								<p class="skill-text">
@@ -109,7 +109,7 @@
 							</div>
 						</div>
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/java.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/java.svg" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">Java</h3>
 								<p class="skill-text">
