--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">Python</h3>
 								<p class="skill-text">
-									秋の授業で、基礎的な事を学び、色んな最新プログラミングができるようになった。</p>
+									最近伸びてきている最新のプログラミング、色々なプログラミングができるようになった。</p>
 							</div>
 						</div>
 						<div class="skill-item">
