--- a/ensyu/11.html
+++ b/ensyu/11.html
@@ -22,7 +22,7 @@
     <hr />
     <p class="left">左揃え</p>
     <p class="center">
-      <!--ここにimgタグ-->
+      <img src="img/sample.jpg" alt="sample" width="200">
     </p>
     <p class="right">右揃え</p>
   </body>
