--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<header class="header ">
 			<div class="inner">
 				<h1 class="header-logo">
-					<a href=".">PORTFOLIO</a>
+					<a href=".">AYATO</a>
 				</h1>
 				<nav class="header-nav">
 					<ul class="header-nav-list">
@@ -55,12 +55,12 @@
 					<h2 class="title">WORKS</h2>
 					<div class="works-list">
 						<a class="works-item btn-denim" href="ensyu/01.html">ENSYU 01</a>
-						<a class="works-item btn-denim" href="ensyu/02.html">ENSYU 02</a>
-						<a class="works-item btn-denim" href="ensyu/03.html">ENSYU 03</a>
-						<a class="works-item btn-denim" href="ensyu/04.html">ENSYU 04</a>
-						<a class="works-item btn-denim" href="ensyu/05.html">ENSYU 05</a>
-						<a class="works-item btn-denim" href="ensyu/06.html">ENSYU 06</a>
-						<a class="works-item btn-denim" href="ensyu/07.html">ENSYU 07</a>
+						<a class="works-item btn-open" href="ensyu/02.html">ENSYU 02</a>
+						<a class="works-item btn-open" href="ensyu/03.html">ENSYU 03</a>
+						<a class="works-item btn-open" href="ensyu/04.html">ENSYU 04</a>
+						<a class="works-item btn-open" href="ensyu/05.html">ENSYU 05</a>
+						<a class="works-item btn-open" href="ensyu/06.html">ENSYU 06</a>
+						<a class="works-item btn-open" href="ensyu/07.html">ENSYU 07</a>
 						<a class="works-item btn-open" href="ensyu/08.html">ENSYU 08</a>
 						<a class="works-item btn-open" href="ensyu/09.html">ENSYU 09</a>
 						<a class="works-item btn-open" href="ensyu/10.html">ENSYU 10</a>
